# pinecone

./: .env.example  .gitignore  CONTRIBUTING.md  FIXES_SUMMARY.py  LICENSE  PROJECT_COMPLETION_SUMMARY.md  README.md  SETUP.md  TEST_SUITE_SUMMARY.md  conftest.py  debug_test.py  dev_env_test.py  final_test.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_test_suite.py  simple_debug.py  test_basic.py  test_comprehensive.py  test_file_permission.py  test_installation.py  test_query_context_fix.py  test_rag_system.py  test_runner.py  validate_all_components.py  validate_fixes.py
.github/workflows/: python-ci.yml
src/: __init__.py  rag_utils.py
src/agents/: __init__.py  generation_agent.py  query_agent.py  retrieval_agent.py
src/data/: .gitkeep  employee_benefits_program.txt  example.txt  sample_document.txt
src/prompts/: system_prompt.jinja2  user_prompt.jinja2
src/scripts/: __init__.py  ingest.py
src/tests/: __init__.py  test_agents.py  test_agents_new.py  test_rag_utils.py  test_rag_utils_new.py
